--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
-git is a distubuted version control system 
-git is a free software 
+git is a very distubuted version control system 
+git is a really free software 
 
