--- a/readme
+++ b/readme
@@ -2,3 +2,6 @@ git is a very distubuted version control system
 git is a really free software 
 git is a power software 
 git tracks changes
+
+why thr ssh key is not able to use
+
